--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -572,8 +572,7 @@ tr.bb-category td {
 
 #profile-menu {
 	list-style: none;
-	position: absolute;
-	right: 0;
+	padding-left: 0;
 }
 
 #profile-menu li {
@@ -585,22 +584,10 @@ tr.bb-category td {
 	font-size: 1.1em;
 	background-color: #ddd;
 	padding: 4px 7px;
-	border-top: 3px double #9e9e9e;
-	position: relative;
-	top: -10px;
-	-moz-border-radius-bottomleft: 6px;
-	-khtml-border-bottom-left-radius: 6px;
-	-webkit-border-bottom-left-radius: 6px;
-	border-bottom-left-radius: 6px;
-	-moz-border-radius-bottomright: 6px;
-	-khtml-border-bottom-right-radius: 6px;
-	-webkit-border-bottom-right-radius: 6px;
-	border-bottom-right-radius: 6px;
 }
 
 #profile-menu li.current a {
 	background-color: #bbb;
-	border-top: 1px solid #9e9e9e;
 }
 
 #profile-menu li a:hover {
