--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -11,7 +11,7 @@ Author URI:
 =================================== */
 
 body a {
-	color: #090;
+	color: #080;
 }
 
 .left { float: left; }
@@ -56,7 +56,6 @@ img.avatar { border: 1px solid #ddd; }
 	-khtml-border-bottom-right-radius: 4px;
 	-webkit-border-bottom-right-radius: 4px;
 	border-bottom-right-radius: 4px;
-	margin-top: 19px;
 }
 
 div.search input {
@@ -73,7 +72,7 @@ div.search input {
 }
 
 div.search input.submit {
-	background-color: #ccc;
+	background-color: #ddd;
 	line-height: 15px;
 	-moz-border-radius: 4px;
 	-khtml-border-radius: 4px;
@@ -83,7 +82,7 @@ div.search input.submit {
 }
 
 div.search input.submit:hover {
-	background-color: #ddd;
+	background-color: #eee;
 	color: rgb(0, 100, 0);
 }
 
@@ -573,7 +572,7 @@ table th, table td {
 }
 
 #latest th a, #forumlist th a, #favorites th a {
-	color: rgb(200, 200, 200);
+	color: #c8e5c8;
 	font-style: italic;
 }
 
