--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -148,6 +148,21 @@ div.search input.submit:active {
 	margin-bottom: 1em;
 }
 
+.header-button {
+	display: block;
+	float: left;
+	text-align: center;
+	background: #eee;
+	-moz-border-radius: 8px;
+	padding: 6px;
+	vertical-align: middle;
+	border: 4px solid #888;
+}
+
+.header-button a {
+	text-decoration: none;
+}
+
 form.login input {
 	border: 1px solid #999;
 	padding: 2px;
