--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -154,9 +154,11 @@ div.search input.submit:active {
 	text-align: center;
 	background: #eee;
 	-moz-border-radius: 8px;
-	padding: 6px;
+	padding: 4px;
 	vertical-align: middle;
 	border: 4px solid #888;
+	margin-right: 10px;
+	font-size: 15px;
 }
 
 .header-button a {
