--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -81,14 +81,14 @@ img.avatar { border: 1px solid #ddd; }
 div.search input {
 	border: 1px solid #999;
 	background-color: #fdfdfd;
-	padding: 2px;
+	padding: 2px 4px;
 	line-height: 14px;
-	font-size: 12px;
+	font-size: 15px;
 	margin: 0;
-	-moz-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
+	-moz-border-radius: 4px;
+	-khtml-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
 }
 
 div.search input.submit {
@@ -152,13 +152,16 @@ div.search input.submit:active {
 	display: block;
 	float: left;
 	text-align: center;
-	background: #eee;
-	-moz-border-radius: 8px;
+	background: #eee;	
 	padding: 4px;
 	vertical-align: middle;
-	border: 4px solid #888;
-	margin-right: 10px;
+	border: 1px solid #888;
+	margin-right: 5px;
 	font-size: 15px;
+	-webkit-border-radius:4px; 
+	-moz-border-radius: 4px;
+	border-radius:4px;
+	behavior:url(border-radius.htc);
 }
 
 .header-button a {
