--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -76,6 +76,7 @@ img.avatar { border: 1px solid #ddd; }
 	-khtml-border-bottom-right-radius: 4px;
 	-webkit-border-bottom-right-radius: 4px;
 	border-bottom-right-radius: 4px;
+	padding-top: 2px;
 }
 
 div.search input {
@@ -153,7 +154,7 @@ div.search input.submit:active {
 	float: left;
 	text-align: center;
 	background: #eee;	
-	padding: 4px;
+	padding: 2px 4px 2px 30px;
 	vertical-align: middle;
 	border: 1px solid #888;
 	margin-right: 5px;
