--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -154,7 +154,7 @@ div.search input.submit:active {
 	float: left;
 	text-align: center;
 	background: #eee;	
-	padding: 2px 4px 2px 30px;
+	padding: 2px 4px 2px 25px;
 	vertical-align: middle;
 	border: 1px solid #888;
 	margin-right: 5px;
@@ -163,6 +163,7 @@ div.search input.submit:active {
 	-moz-border-radius: 4px;
 	border-radius:4px;
 	behavior:url(border-radius.htc);
+	background: url("http://digitalhumanities.org/answers/my-plugins/best-answer/best-answer.png") no-repeat scroll 5px 50% #EEEEEE;
 }
 
 .header-button a {
@@ -181,8 +182,13 @@ form.login input {
 	border-radius: 3px;
 }
 
+form.login input[type="text"] {
+	height: 23px;
+}
+
 form.login input.submit {
-	background-color: #ccc;
+	background-color: #eee;
+	color: #226;
 	float: left;
 	display: block;
 	line-height: 15px;
