--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -167,7 +167,7 @@ div.search input.submit:active {
 	float: left;
 	text-align: center;
 	background: #eee;	
-	padding: 2px 4px 2px 25px;
+	padding: 2px 4px 2px 26px;
 	vertical-align: middle;
 	border: 1px solid #888;
 	margin-right: 5px;
@@ -539,7 +539,7 @@ input#tagformsub:active {
 }
 
 .poststuff a {
-	padding-left: 25px;
+	padding-left: 26px;
 	display: block;
 	float: left;
 }
@@ -716,7 +716,9 @@ div.social-it ul.socials li a {
 #profile-menu {
 	list-style: none;
 	padding-left: 0;
-	padding-top: 10px;
+	padding: 10px 0 20px 0;
+	margin: 0 0 20px 0;
+	border-bottom: 1px solid #eee;
 }
 
 #profile-menu li {
@@ -731,7 +733,7 @@ div.social-it ul.socials li a {
 
 #profile-menu li.current a {
 	text-decoration: underline;
-	background: url("images/current.png") no-repeat scroll 5px 50% transparent;
+	background: url("images/current.png") no-repeat scroll 10px 50% transparent;
 	color: #200;
 }
 
