--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -50,11 +50,11 @@ input[type="submit"] {
 	border: 1px solid #999;
 	background-color: #ddd;
 	line-height: 23px;
+	padding: 2px 4px;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
-	padding: 2px 4px;
-	behavior:url('http://digitalhumanities.org/answers/bb-templates/dhqa/border-radius.htc');
+	behavior: url(border-radius.htc);
 }
 
 input[type="submit"]:hover {
@@ -100,24 +100,25 @@ img.avatar { border: 1px solid #ddd; }
 	padding-top: 2px;
 }
 #header div.search {
+	border: 1px solid transparent;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
+	behavior: url(border-radius.htc);
 	padding-top: 2px;
-	behavior:url('http://digitalhumanities.org/answers/bb-templates/dhqa/border-radius.htc');
 }
 
 div.search input {
 	border: 1px solid #999;
 	background-color: #fdfdfd;
 	padding: 2px 4px;
-	line-height: 14px;
+	line-height: 23px;
 	font-size: 15px;
 	margin: 0;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
-	behavior:url('http://digitalhumanities.org/answers/bb-templates/dhqa/border-radius.htc');
+	behavior: url(border-radius.htc);
 }
 
 #main {
@@ -177,12 +178,13 @@ div.search input {
 	border: 1px solid #888;
 	margin-right: 5px;
 	font-size: 15px;
-	behavior:url('border-radius.htc');
-	-webkit-border-radius:4px; 
-	-moz-border-radius: 4px;
-	border-radius:4px;
 	background: url("http://digitalhumanities.org/answers/my-plugins/best-answer/best-answer.png") no-repeat scroll 5px 50% #EEEEEE;
-}
+	border: 1px solid transparent;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	behavior: url(border-radius.htc);
+	}
 
 .header-button:hover {
 	background-color: #f7f7f7;
@@ -220,11 +222,10 @@ form.login input {
 	line-height: 14px;
 	font-size: 12px;
 	margin: 0;
-	-moz-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	behavior:url('border-radius.htc');
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	behavior: url(border-radius.htc);
 }
 
 form.search-form input[type="text"] {
@@ -245,11 +246,12 @@ form.login input.submit {
 	float: left;
 	display: block;
 	line-height: 23px;
+	padding: 2px 4px;
+	border: 1px solid transparent;
 	-moz-border-radius: 4px;
-	-khtml-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
-	padding: 2px 4px;
+	behavior: url(border-radius.htc);
 }
 
 form.login input.submit:hover {
@@ -389,10 +391,10 @@ input#tag {
 	line-height: 14px;
 	font-size: 12px;
 	margin: 0;
-	-moz-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	behavior: url(border-radius.htc);
 }
 
 input#tagformsub {
@@ -401,11 +403,11 @@ input#tagformsub {
 	font-size: 12px;
 	margin: 0;
 	line-height: 15px;
+	padding: 2px 4px;
 	-moz-border-radius: 4px;
-	-khtml-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
-	padding: 2px 4px;
+	behavior: url(border-radius.htc);
 }
 
 input#tagformsub:hover {
@@ -454,12 +456,11 @@ input#tagformsub:active {
 	padding: 1.5em 1em;
 	margin-left: 140px;
 	background-color: #fff;
+	border: 1px solid transparent;
 	-moz-border-radius: 6px;
-	-khtml-border-radius: 6px;
 	-webkit-border-radius: 6px;
 	border-radius: 6px;
-	behavior:url(border-radius.htc);
-}
+	behavior: url(border-radius.htc);
 
 #thread li.alt .threadpost { background-color: #eee; }
 
@@ -482,11 +483,11 @@ input#tagformsub:active {
 	margin-top: 2px;
 	margin-bottom: 2px;
 	background-color: #e4f3e1;
-	-moz-border-radius: 6px;
-	-khtml-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	border-radius: 6px;
 	border: 0.2em solid #e4f3e1;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	behavior: url(border-radius.htc);
 }
 
 #thread li.pingback.alt {
@@ -572,10 +573,11 @@ h2.post-form {
 	background-color: #f0f0f0;
 	padding: 1em;
 	margin-bottom: 1em;
+	border: 1px solid transparent;
 	-moz-border-radius: 6px;
-	-khtml-border-radius: 6px;
 	-webkit-border-radius: 6px;
 	border-radius: 6px;
+	behavior: url(border-radius.htc);
 }
 
 .postform textarea {
@@ -587,10 +589,9 @@ h2.post-form {
 	border: 1px solid #ccc;
 	display: block;
 	-moz-border-radius: 3px;
-	-khtml-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
-	behavior:url(border-radius.htc);
+	behavior: url(border-radius.htc);
 }
 
 .postform label { display: block; }
@@ -603,10 +604,9 @@ h2.post-form {
 	border: 1px solid #ccc;
 	display: block;
 	-moz-border-radius: 3px;
-	-khtml-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
-	behavior:url(border-radius.htc);
+	behavior: url(border-radius.htc);
 }
 
 .postform p#post-form-forum-container label span {
@@ -816,10 +816,9 @@ div.social-it ul.socials li a {
 	font-size: 12px;
 	margin: 0;
 	-moz-border-radius: 3px;
-	-khtml-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
-	behavior:url(border-radius.htc);
+	behavior: url(border-radius.htc);
 }
 
 #search-for { margin: 15px 0 5px; }
@@ -907,9 +906,9 @@ div.social-it ul.socials li a {
 	font-size: 12px;
 	margin: 0;
 	-moz-border-radius: 3px;
-	-khtml-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
+	behavior: url(border-radius.htc);
 }
 
 #login-page fieldset p,
@@ -947,11 +946,11 @@ p.required-message:before {
 	width: 280px;
 	border: 1px solid #ccc;
 	background-color: #e3e3e3;
+	border: 1px solid transparent;
 	-moz-border-radius: 3px;
-	-khtml-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
-	behavior:url(border-radius.htc);
+	behavior: url(border-radius.htc);
 }
 
 #pass-strength-result.bad {
