small best answer and header button tweaks

--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -195,7 +195,7 @@ div.search input {
 }
 
 .header-button.ask-link {
-	background-color: #af9;
+	background-color: #ffc;
 	background-image: url('images/question.png');
 }
 
