header button hover

--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -200,7 +200,7 @@ div.search input {
 }
 
 .header-button.ask-link:hover {
-	background-color: #cfb;
+	background-color: #ffa;
 }
 
 .header-button.profile-link {
