--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -16,12 +16,6 @@ Author URI:
   src: local("Aller"), url('fonts/Aller_Rg.ttf') format("truetype"); /* non-IE */  
 }
 
-@font-face {  
-  font-family: "Aller Display";  
-  src: url('fonts/AllerDisplay.eot'); /* IE */  
-  src: local("Aller Display"), url('fonts/AllerDisplay.ttf') format("truetype"); /* non-IE */  
-}
-
 html, body {
 	height: 100%;
 	min-height: 100%;
@@ -102,7 +96,7 @@ img.avatar { border: 1px solid #ddd; }
 =================================== */
 
 #header p { margin-bottom: 0; font-weight: bolder;}
-#header h1 {margin-bottom: 0; font-family:"Aller Display","Helvetica Neue",Arial,Helvetica,sans-serif;}
+#header h1 {margin-bottom: 0; font-weight: bold; font-family:"Aller","Helvetica Neue",Arial,Helvetica,sans-serif;}
 #header h1 a { text-decoration: none; }
 #header h1 a:hover { color: #666; }
 
