--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -19,6 +19,7 @@ Author URI:
 html, body {
 	height: 100%;
 	min-height: 100%;
+	background: #373535;
 }
 
 /* hack to fit ACH bg img */
@@ -31,11 +32,12 @@ html, body {
 }
 
 body .container {
-	background: url('images/ach-wrapper.png') 0 0 no-repeat;
+	background: url("images/ach-wrapper.png") no-repeat scroll 0 0 #FFF;
 	padding: 0px 20px;
 	margin: 0 auto;
 	border-left: 1px solid #ddd;
 	border-right: 1px solid #ddd;
+	font-family: "Lucida Grande",tahoma,helvetica,arial,sans-serif;
 }
 
 body a {
@@ -98,7 +100,7 @@ img.avatar { border: 1px solid #ddd; }
 #header p { margin-bottom: 0; font-weight: bolder;}
 #header h1 {margin-bottom: 10px; font-weight: normal; font-family:"League Gothic","Helvetica Neue",Arial,Helvetica,sans-serif;font-size: 5em;}
 #header h1 a { text-decoration: none; }
-#header h1 a:hover { color: #666; }
+#header h1 a:hover { color: #400; }
 
 #header h3 {font-weight: lighter;}
 
