--- a/bb-templates/dhqa/style.css
+++ b/bb-templates/dhqa/style.css
@@ -38,8 +38,8 @@ body .container {
 	background: url("images/ach-wrapper.png") no-repeat scroll 0 0 #FFF;
 	padding: 0px 20px;
 	margin: 0 auto;
-	border-left: 1px solid #ddd;
-	border-right: 1px solid #ddd;
+	border-left: 1px solid #888;
+	border-right: 1px solid #888;
 	font-family: "Lucida Grande",tahoma,helvetica,arial,sans-serif;
 }
 
@@ -101,7 +101,7 @@ img.avatar { border: 1px solid #ddd; }
 =================================== */
 
 #header p { margin-bottom: 0; font-weight: bolder;}
-#header h1 {margin-bottom: 10px; font-weight: normal; font-family:"League Gothic","Helvetica Neue",Arial,Helvetica,sans-serif;font-size: 5em;}
+#header h1 {margin-bottom: 10px; font-weight: normal; font-family:"League Gothic","Arial Narrow","Helvetica Neue",Arial,Helvetica,sans-serif;font-size: 5em;}
 #header h1 a { text-decoration: none; }
 #header h1 a:hover { color: #400; }
 
@@ -306,7 +306,7 @@ form.login input#remember {
 }
 
 #front-page #main h2, #forum-page #main h2, h2.post-form, #userlogin, #currentfavorites, #register, #passwordrecovery {
-	font-family: "League Gothic","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-family: "League Gothic","Arial Narrow","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-weight: normal;
 	font-size: 3em;
 	border-bottom: 1px solid #ddd;
@@ -368,7 +368,12 @@ a.next.page-numbers:hover {
 /* Topic Page
 =================================== */
 
-#main h2 {font-weight: bold;}
+#main h2 {
+	font-family: "League Gothic","Arial Narrow","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-weight: normal;
+	font-size: 3em;
+	color: #400;
+}
 
 .infobox {
 	border: 1px solid #ccc;
